<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TrayLoad_IO_typ" Id="{ea677e51-681c-06ee-2706-9e6e36ab5c0f}">
    <Declaration><![CDATA[TYPE TrayLoad_IO_typ:
STRUCT
	Inputs	: TrayLoad_Inputs_typ;
	Outputs	: TrayLoad_Outputs_typ;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>