<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{ba655886-9947-4787-bd10-a16d0603440f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT

    NUM_MOVERS   		: USINT := 10;   	// This should be set to the exact number of movers on the system
    NUM_STATIONS 		: USINT := 5;   	// This should be set to a value equal to or greater than the number of stations needed
    NUM_MULTISTATIONS 	: USINT := 2;   	// This should be set to a value equal to or greater than the number of Multi stations needed
	MULTISTN_NUM_STN	: USINT := 4;		// This should be set to a value equal to or greater than the max number of stations in a multi station
    TRACK_LENGTH 		: LREAL := 3000;	// This should be set to the exact length [mm] of the track system

	STN_ORIENT		: USINT := 0;
	STN_BALLSEAT	: USINT := 1;
	STN_VISION		: USINT := 2;
	STN_KICKOUT		: USINT := 3;

	MULTISTN_PRINT		: USINT := 0;
	MULTISTN_TRAYLOAD	: USINT := 1;

    {attribute 'TcInitSymbol'}
    pXtsProcessingUnit : OTCID:=0; // This pointer needs to be initialized in the Main Instance, under Symbol Initialization

	NUM_TRACKS  : USINT := 1;	// This is the number of logical tracks in the system

END_VAR
VAR_GLOBAL
	newCallTime: LREAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>